--- a/css/reset.css
+++ b/css/reset.css
@@ -9,9 +9,10 @@
 }
 html,
 body {
-	width: 100vw;
+	width: 100%;
 	min-height: 100%;
-	overflow-x: hidden;
+	position: relative;
+	overflow: hidden;
 }
 html {
 	font-size: 62.5%;
@@ -19,7 +20,6 @@ html {
 body {
 	font-size: 1rem;
 	scroll-behavior: smooth;
-	overflow-x: hidden;
 }
 header,
 menu,
